# snopt-interface

./: .gitignore  LICENSE  Makefile.in  README.md  configure.ac
cexamples/: hs118.c  toyA.c  toyB.c  toyC.c
cppexamples/: catmixa.cpp  sntoyB.cpp  sntoyC.cpp  sntoya-jac.cpp  sntoya.cpp  sntoya2.cpp
include/: snopt.h  snoptProblem.hpp  snopt_cwrap.h  sqopt.h  sqoptProblem.hpp  sqopt_cwrap.h
src/: snoptProblem.cpp  snopt_cwrap.c  snopt_wrapper.f90  sqoptProblem.cpp  sqopt_cwrap.c  sqopt_wrapper.f90
